# orca-cleaner

./: .gitignore  CLAUDE.md  LICENSE  MORNING_QUESTIONS.md  README.md  config.toml.example  pyproject.toml  requirements.txt
orcaslicer_cleaner/: __main__.py  cleaner.py  cli.py  config.py  deduplicator.py  fileops.py  matrix.py  models.py  naming.py  safety.py  standardizer.py  system_profiles.py  validators.py
src/orcaslicer_cleaner/: cleaner.py  cli.py  deduplicator.py  loader.py  models.py  reporter.py  validators.py
tests/: test_config.py  test_deduplicator.py  test_dupes.py  test_empty_cp_assignment.py  test_machine_matching.py  test_matrix.py  test_mutations.py  test_naming.py  test_provenance.py  test_prune.py  test_safety.py  test_safety_integration.py  test_standardizer.py
