[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orcaslicer-cleaner"
version = "0.1.0"
description = "Validate, deduplicate, and clean up OrcaSlicer profiles"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "rapidfuzz>=3.0",
]

[project.scripts]
ocs = "orcaslicer_cleaner.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
